# differentiable_3dshapes

./: .gitignore  README.md  differentiable_3dshapes.py  generate_segmentation_samples.py  profile_renderer_line.py  pyproject.toml  renderer_3dshapes_sim.py
profiles/: line_profile_b1.txt  line_profile_b1_after_latest.txt  line_profile_b1_after_latest_cpu.txt  line_profile_b1_after_roomcache.txt  line_profile_b4.txt  line_profile_b4_after_capsule_scalar_cpu.txt  line_profile_b4_after_capsule_scalar_cpu_r2.txt  line_profile_b4_after_latest_api.txt  line_profile_b4_after_latest_cpu.txt  line_profile_b4_after_roomcache.txt
